Fix DCHECK failure and add unittest for BlimpSystemURLContextGetter.

The URLRequestContextBuilder::Build calll in this function requires at least a dummy ProxyService to be set on linux builds. The nullptr ProxyService field in the context builder triggers a DCHECK on linux and android builds.

Also adding a minimal test to confirm fix and avoid regressions.

BUG=609998

Review-Url: https://codereview.chromium.org/1960813002
Cr-Commit-Position: refs/heads/master@{#392384}

Former-commit-id: 20f84f3e73b8f4330659fa53ed11b9b5bc642d80